adjusted email confirmation
